--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "webpack": "^5.83.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.0"
+  },
+  "dependencies": {
+    "axios": "^1.4.0"
   }
 }
